--- a/index.html
+++ b/index.html
@@ -30,37 +30,53 @@
 		</ul>
 	</section>
 
-
-	<article id="aprendizado">
-		<section class="licoes">
-			<h2>Lições aprendidas</h2>
-			<ol id="licoes_aprendidas">
-				<li>Unix</li>
-				<li>Bash</li>
-				<li>Git</li>
-				<li>GitHub</li>
-				<li>Inteligência Emocional</li>
-				<li>Emoções</li>
-				<li>HTML</li>
-				<li>CSS</li>
-				<li>HTML Semântico</li>
-				<li>Box Model</li>
-			</ol>
-			<h2>Lições a aprender</h2>
-			<ul id="licoes_a_aprender">
-				<li>JavaScript</li>
-				<li>React</li>
-				<li>DOM</li>
-				<li>CSS Responsivo</li>
-				<li>Autoconhecimento</li>
-				<li>Comunicação</li>
-				<li>SQL</li>
-				<li>Node JS</li>
-				<li>Python</li>
-				<li>Algoritmos</li>
-			</ul>
-		</section>
+	<section class="licoes">
+		<h2>Lições aprendidas:</h2>
+		<ol id="licoes_aprendidas">
+			<li>Unix</li>
+			<li>Bash</li>
+			<li>Git</li>
+			<li>GitHub</li>
+			<li>Inteligência Emocional</li>
+			<li>Emoções</li>
+			<li>HTML</li>
+			<li>CSS</li>
+			<li>HTML Semântico</li>
+			<li>Box Model</li>
+		</ol>
+		<h2>Lições a aprender:</h2>
+		<ul id="licoes_a_aprender">
+			<li>JavaScript</li>
+			<li>React</li>
+			<li>DOM</li>
+			<li>CSS Responsivo</li>
+			<li>Autoconhecimento</li>
+			<li>Comunicação</li>
+			<li>SQL</li>
+			<li>Node JS</li>
+			<li>Python</li>
+			<li>Algoritmos</li>
+		</ul>
+		<h2>Mais sobre as lições</h2>
+		<table id="table-licoes">
+			<thead>
+				<tr>
+					<th>Lição que mais gostei</th>
+					<th>Lição tive mais dificuldade</th>
+					<th>Lição que estou mais ansioso para aprender</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>Git e GitHub</td>
+					<td>Git e GitHub</td>
+					<td>JavaScript</td>
+				</tr>
+			</tbody>
+		</table>
+	</section>
 	
+	<article id="aprendizado">
 		<section class="aprendizado">
 			<h2>Aprendizado na Trybe</h2>
 			<p>O meu aprendizado na <strong>Trybe</strong> está sendo muito incrivel, apesar da rotina intensa, sinto que estou absorvendo muito bem todo o conteúdo passado. Isso graças ao meu esforço e também a toda <strong>estrutura, equipes e conteúdo didático</strong> que a Trybe nos proporciona. O primeiro módulo está bem tranquilo por eu já ter uma base de HTML e CSS, porém foi possível aprender muitos conteúdos novos e aprimorar ainda mais esse conhecimento. </p>
