--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
 			<br>
 			O programa conta com mais de 1.500 horas de aulas presenciais e online, aborda introdução ao desenvolvimento de software, front-end, back-end, ciencia da computação, engenharia de software, metodologias ageis e habilidades comportamentais.</p>
 		</article>
-		 <a href="https://www.betrybe.com/" target="_blanck">Caso tenha se
-		 interessado pelo aprendizadoclique aqui!</a>
 		 <aside class="lado-direito">
 			 <p>O processo de aprendizado na Trybe é um dos melhores que já
 			 experimenatei a metodologia aplicada é incrivel!</p>
 		 </aside>
 	</main>
-	<footer id="rodape"></footer>
-    
+	<footer id="rodape">
+		<a id="link-final" href="https://www.betrybe.com/" target="_blanck">Caso tenha se
+			interessado pelo aprendizadoclique aqui!</a>
+	</footer>
 </body>
 </html>
