--- a/index.html
+++ b/index.html
@@ -14,37 +14,43 @@
         <h1 id="titulo">O foguete está decolando! Lessons Learned: Meu primeiro projeto na Trybe</h1>
     </header>
     <main>
-        <img id="minha_foto" src="https://media-exp1.licdn.com/dms/image/C4D03AQF7fz0gN2Sz3w/profile-displayphoto-shrink_800_800/0/1616434514508?e=1635379200&v=beta&t=E0P-UxT6X47WBe4B0BQR7gu-kaAvUzxfNZSUV968Fzg" alt="Fundo bege. Mulher cabelo vermelho, pele clara e blusa preta">
+        <img id="minha_foto"
+            src="https://media-exp1.licdn.com/dms/image/C4D03AQF7fz0gN2Sz3w/profile-displayphoto-shrink_800_800/0/1616434514508?e=1635379200&v=beta&t=E0P-UxT6X47WBe4B0BQR7gu-kaAvUzxfNZSUV968Fzg"
+            alt="Fundo bege. Mulher cabelo vermelho, pele clara e blusa preta">
         <section>
-        <ol id="licoes_aprendidas">
-            <li>Unix & Bash</li>
-            <li>O que é o Git & GitHub</li>
-            <li>Entendendo como a internet funciona</li>
-            <li>HTML&CSS: Estruturas de página</li>
-            <li>HTML&CSS: Primeiros passos em CSS</li>
-            <li>HTML&CSS: Seletores e posicionamento</li>
-            <li>HTML Semântico</li>
-            <li>Introdução a habilidades socioemocionais</li>
-            <li>Como ter empatia</li>
-            <li>Entendendo as emoções</li>
-        </ol>
-    </section>
-    <section>
-        <ul id="licoes_a_aprender">
-            <li>Flexbox</li>
-            <li>JavaScript</li>
-            <li>React</li>
-            <li>Python</li>
-            <li>Algoritmos</li>
-            <li>Comunicação</li>
-            <li>Colaboração</li>
-            <li>Pensamento crítico</li>
-            <li>Criatividade</li>
-            <li>Liderança</li>
-        </ul>
-    </section>
-    </main>
-    <footer id="rodape"> <p>Elaborado por: <a href="https://www.linkedin.com/in/renata-domingues-369358bb/" target="_blank"> Renata Domingues</a><br> Atividade proposta pela <a href="https://www.betrybe.com/" target="_blank">Trybe</a></p></footer>
+            <ol id="licoes_aprendidas">
+                <li>Unix & Bash</li>
+                <li>O que é o Git & GitHub</li>
+                <li>Entendendo como a internet funciona</li>
+                <li>HTML&CSS: Estruturas de página</li>
+                <li>HTML&CSS: Primeiros passos em CSS</li>
+                <li>HTML&CSS: Seletores e posicionamento</li>
+                <li>HTML Semântico</li>
+                <li>Introdução a habilidades socioemocionais</li>
+                <li>Como ter empatia</li>
+                <li>Entendendo as emoções</li>
+            </ol>
+        </section>
+        <section>
+            <ul id="licoes_a_aprender">
+                <li>Flexbox</li>
+                <li>JavaScript</li>
+                <li>React</li>
+                <li>Python</li>
+                <li>Algoritmos</li>
+                <li>Comunicação</li>
+                <li>Colaboração</li>
+                <li>Pensamento crítico</li>
+                <li>Criatividade</li>
+                <li>Liderança</li>
+            </ul>
+        </section>
+           </main>
+    <footer id="rodape">
+        <p>Elaborado por: <a href="https://www.linkedin.com/in/renata-domingues-369358bb/" target="_blank"> Renata
+                Domingues</a><br> Atividade proposta pela <a href="https://www.betrybe.com/" target="_blank">Trybe</a>
+        </p>
+    </footer>
 </body>
 
 </html>
