decimo requisito concluido

--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
 <body>
   <header id="cabecalho">
     <h1 id="titulo"> Lessons Learned</h1>
+    <nav class="menu_principal">
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#licoes_aprendidas">Lições</a></li>
+        <li><a href="#artigos">Artigos</a></li>
+      </ul>
+    </nav>
   </header>
-  <main>
+  <main id="home">
     <img id="minha_foto" src="img/orlando.jpg" alt="homem em um shopping">
     
     <section>
@@ -44,7 +51,7 @@
       </ul>
     </section>
 
-    <article class="artigo">
+    <article class="artigo" id="artigos">
       <p>Menos de três semanas na Trybe já me trouxeram inúmeros aprendizados, desde assuntos onde eu já conhecia, e me surpreendi ao ser apresentado a novas formas de trabalhar com determinadas ferramentas, até assuntos que eu nunca vi. Está sendo tão prático aprender com a didática que é passada, que acabo enfrentando pouca dificuldade para entender os assuntos passados até o momento.</p>
     </article>
 
