--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
         <section>Bom dia, boa tarde e boa noite, meu nome é <i><strong>Diego</strong></i> e gostaria de dividir com vcs minha esperiência até o momento no mundo da programação,em 2 semanas de curso passei de uma pessoa que não sabia absolutamente nada sobre programação, pra alguém que já consegue arranhar a criação de sua pŕopria página da net, devo tudo isso à <a href="https://www.betrybe.com/" target="_blank">TRYBE</a> e só tenho a agradecer a todos os envolvidos neste projeto que mudará nossas vidas!
         </section>
     </article>
+
+    <aside>
+        <h3>Sobre as SoftSkills</h3>
+        <section>Importante pontuar que não só de código, assim sendo gostaria também de parebenizar a todos os envolvidos por todo o suporte com nossas SoftSkills, tornando-nos profissionais que respeitam e tem empatia pelo próximo.            
+        </section>
+    </aside>
+
     <ol id="licoes_aprendidas">Lições Aprendidas
      <li>Unix</li>
      <li>Git</li>
