--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
                 <li>Liderança</li>
             </ul>
         </section>
+        <article>
+            <p>Iniciar uma transição de carreira aos 32 não é nada fácil. Várias dúvidas surgem e com elas vem a insegurança: Será que estou fazendo a opção correta?</p><p>Logo que ingressei na Trybe essas dúvidas se dissiparam. Aqui nós temos um sistema de ensino que realmente vale apena o investimento do tempo e dinheiro.</p><p>Como diz o querido Jack, primeiro nós damos os <em>baby steps</em> e depois de 10 dias de aulas e cronograma intenso já estamos prontos para dar o primeiro passo!</p><p>Tudo isso só é possível com muita dedicação e claro ter o suporte de um time incrível!</p>
+        </article>
            </main>
     <footer id="rodape">
         <p>Elaborado por: <a href="https://www.linkedin.com/in/renata-domingues-369358bb/" target="_blank"> Renata
