--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                       <a id="perfilt" href="http://linkedin.com/in/matheus-gomes-189203a3" target="_blank"><strong>Linkedin</strong></a>
                   </nav>
               </div>
-              <div class="lista">
+              <div>
                   <h2>Lições</h2>
                   <ol id="licoes_aprendidas">
                       <li>Comandos do Terminal</li>
@@ -51,23 +51,34 @@
               </div>
           </section>
         </div>
+        <div>
           <section>
-              <article>
+              <article class="lado-esquerdo">
                   <p>A Trybe Tem me proporcionado um aprendizado rápido e técnico sobre programação, e vejo que todo o aprendizado exige um esforço enorme da minha parte, visto que eles utilizam o método de ensino que nos fornece a um melhor aprendizado, com isso posso dizer que estou me dedicando muito para conseguir aprender e acompanhar o ritmo da Trybe.</p>
               </article>
-              <aside>
+              <aside class="lado-direito">
                   <p>Bem meu aprendizado tem sido bastante puxado, visto que durmo apenas de 5 a 6 horas por dia, e tenho buscado nas horas vagas do trabalho estudar mais sobre o assunto, e buscado tirar duvidas em sites e blogs, e quando preciso na mentoria.</p>
               </aside>
           </section>
+        </div>
         <div>
           <footer id="rodape">
               <table>
                   <h2>Objetivos</h2>
-                  <tr>
-                      <td>Conseguir terminar sem pendências</td>
-                      <td>Arrumar um emprego depois do modulo de Back-end</td>
-                      <td>Criar uma rede de Network</td>
-                      <td>Trabalhar nos meus pontos fracos</td>
+                  <tr class="bord1">
+                      <td>Hamburguer</td>
+                      <td>Pizza</td>
+                      <td>Pastel</td>
+                  </tr>
+                  <tr class="bord2">
+                      <td>Carne</td>
+                      <td>Calabresa</td>
+                      <td>Frango</td>
+                  </tr>
+                  <tr class="bord3">
+                      <td>Cheddar</td>
+                      <td>Mussarela</td>
+                      <td>Bacon</td>
                   </tr>
               </table>
           </footer>
