Atualizando alguns erros semânticos

--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <title>Primeiro projeto HTMl e CSS</title>
 </head>
 <body>
-    <header id="cabecalho">
-        <h1 id="titulo">Lições Aprendidas na Trybe</h1>
-    </header>
+    <header id="cabecalho"> <h1 id="titulo">Lições Aprendidas na Trybe</h1> </header>
     
     <img id="minha_foto" src="erikfoto.png" alt="foto Erik Duarte">
 
@@ -23,7 +21,7 @@
     </nav>
 
     <section class="lessons.learned" id="aprendizado">
-      <h4>Lições Aprendidas:</h4>
+      <h2>Lições Aprendidas:</h2>
         <ol id="licoes_aprendidas">
             <li>Unix e Bash</li>
             <li>Git</li>
@@ -39,7 +37,7 @@
     </section> 
 
     <section class="lessons.to.learn" id="aprendizado-futuro">
-      <h3> Lições a aprender:</h3>
+      <h2> Lições a aprender:</h2>
         <ul id="licoes_a_aprender">
             <li>React</li>
             <li>Javascript</li>
@@ -54,7 +52,7 @@
         </ul>
     </section>
 
-    <h3 id="sobre-mim">Rede Social:</h3>
+    <h2 id="sobre-mim">Rede Social:</h2>
     <a  href="https://www.linkedin.com/in/erik-duarte-rodrigues/" target="_blank" alt="Linkedin Erik">Meu Linkedin</a>
 
     <article class="sobre-o-aprendizado">
