mudança no link, para o codesniff

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 </head>
 <body>
     <header id="cabecalho">
-        <h1 id="titulo">Projeto Lessons Learned -<a href="https://www.betrybe.com/" target="_blank" >Trybe</a></h1>
+        <h1 id="titulo">Projeto Lessons Learned -<a href="https://www.betrybe.com/" target="_blank" >Trybe (opens new window)</a></h1>
     </header>
     <main>
         <section id="section-one">
             <img id="minha_foto" src="eu.jpg" alt="Foto minha">
             <ol id="licoes_aprendidas">
-                <h3>Lições aprendidas</h3>
+                <h2>Lições aprendidas</h3>
                 <li>Aprendizado 1</li>
                 <li>Aprendizado 2</li>
                 <li>Aprendizado 3</li>
@@ -26,7 +26,7 @@
                 <li>Aprendizado 10</li>
             </ol>
             <ul id="licoes_a_aprender">
-                <h3>Lições a aprender</h3>
+                <h2>Lições a aprender</h3>
                 <li>Aprendizado 1</li>
                 <li>Aprendizado 2</li>
                 <li>Aprendizado 3</li>
