aprendendo CSS :smiling_face_with_tear:

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
       <h1>Lista de Skils</h1>
       <table>
       <tr>
-        <td>
+        <thead><td><tr>Lições Aprendidas</tr><tr>Lições a Aprender</tr></td></thead>
+        
+        <tbody><td>
           <ol id="licoes_aprendidas">
             <li>Unix</li>
             <li>Git</li>
@@ -40,19 +42,20 @@
           </ol>
         </td>
         <td>
-    <ul id="licoes_a_aprender">
-      <li>JavaScript</li>
-      <li>DOM</li>
-      <li>Forms</li>
-      <li>CSS Responsivo</li>
-      <li>ES6</li>
-      <li>HOF</li>
-      <li>Unit Tests</li>
-      <li>React</li>
-      <li>Node</li>
-      <li>SQL</li>
-    </td>
-    </tr>
+          <ul id="licoes_a_aprender">
+            <li>JavaScript</li>
+            <li>DOM</li>
+            <li>Forms</li>
+            <li>CSS Responsivo</li>
+            <li>ES6</li>
+            <li>HOF</li>
+            <li>Unit Tests</li>
+            <li>React</li>
+            <li>Node</li>
+            <li>SQL</li>
+          </td>
+          </tr>
+      </tbody>
     </ul>  
   </table>
     </div>
