Task 14 and 15 completed

--- a/index.html
+++ b/index.html
@@ -18,39 +18,50 @@
         </nav>
     </header>
     <main>
-        <article class="max-full">
+        <section class="max-full">
             <img id="minha_foto" src="./perfil.jpeg" alt="Minha foto">
             <a href="https://github.com/KevinSena" target="_blank">GitHub</a>
-            <h2>Artigo</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore fugit saepe modi ea, quis quaerat incidunt vel enim necessitatibus ad? Non molestiae, sapiente veniam facere nostrum temporibus eos? Et, ipsam. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum hic similique magni corporis? Fuga quos quo, similique rem fugiat cumque optio molestiae veritatis cupiditate nulla iusto eligendi quia, ducimus error!</p>
-        </article>
-        <section class="max-full">
-            <h2>Lições</h2>
-            <ol id="licoes_aprendidas">
-                <li>Unix</li>
-                <li>Git</li>
-                <li>Github</li>
-                <li>Empatia</li>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>Slack</li>
-                <li>Zoom</li>
-                <li>Inspect</li>
-                <li>Semantic HTML</li>
-            </ol>
-            <ul id="licoes_a_aprender">
-                <li>JavaScript</li>
-                <li>DOM</li>
-                <li>Forms</li>
-                <li>CSS Responsive</li>
-                <li>ES6</li>
-                <li>HOF</li>
-                <li>Unit Tests</li>
-                <li>React</li>
-                <li>Node</li>
-                <li>SQL</li>
-            </ul>
+            <section>
+                <h2>Lições</h2>
+                <ol id="licoes_aprendidas">
+                    <li>Unix</li>
+                    <li>Git</li>
+                    <li>Github</li>
+                    <li>Empatia</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Slack</li>
+                    <li>Zoom</li>
+                    <li>Inspect</li>
+                    <li>Semantic HTML</li>
+                </ol>
+                <ul id="licoes_a_aprender">
+                    <li>JavaScript</li>
+                    <li>DOM</li>
+                    <li>Forms</li>
+                    <li>CSS Responsive</li>
+                    <li>ES6</li>
+                    <li>HOF</li>
+                    <li>Unit Tests</li>
+                    <li>React</li>
+                    <li>Node</li>
+                    <li>SQL</li>
+                </ul>
+            </section>
+
+            <section>
+                <article class="lado-esquerdo">
+                <h2>Artigo</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore fugit saepe modi ea, quis quaerat incidunt vel enim necessitatibus ad? Non molestiae, sapiente veniam facere nostrum temporibus eos? Et, ipsam. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum hic similique magni corporis? Fuga quos quo, similique rem fugiat cumque optio molestiae veritatis cupiditate nulla iusto eligendi quia, ducimus error!</p>
+                </article>
+                <aside class="lado-direito">
+                <h2>Meu aprendizado</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id inventore accusamus, cupiditate consequuntur quos praesentium commodi, doloribus harum ad rem veritatis magni odit. Ducimus, eos molestias iusto amet labore quae!</p>
+                </aside>
+            </section>
+            
         </section>
+
         <section class="max-full">
             <table>
                 <tr>
@@ -68,11 +79,8 @@
                 </tr>
             </table>
         </section>
+        
     </main>
-    <aside class="max-full">
-        <h2>Meu aprendizado</h2>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id inventore accusamus, cupiditate consequuntur quos praesentium commodi, doloribus harum ad rem veritatis magni odit. Ducimus, eos molestias iusto amet labore quae!</p>
-    </aside>
     <footer id="rodape">
         <h1>Todos os direitos reservados, Kevin Sena</h1>
     </footer>
