--- a/index.html
+++ b/index.html
@@ -3,57 +3,80 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Lessons Learned | Rael Nogueira Pires</title>
     <link rel="stylesheet" href="style.css">
   </head>
+
   <body>
+
     <header id="cabecalho">
-        <h1 id="titulo">Lessons Learned [Projeto]</h1>
+      <h1 id="titulo">Lessons Learned [Projeto]</h1>
+      <nav>
+        <h1>Menu de Navegação</h1>
+        <ul>
+          <li>Meu aprendizado</li>
+          <li>Uma passagem</li>
+          <li>GitHub</li>
+        </ul>
+      </nav>
     </header>
-    <img id="minha_foto" src="myPhoto.jpeg" alt="Minha foto">
+
+    <div>
+      <h1 class="photo">Minha foto</h1>
+      <img id="minha_foto" src="myPhoto.jpeg" alt="Minha foto">
+    </div>
+
+    <div>
+      <h1 id="gitLink">GitHub</h1>
+        <p>Veja alguns dos exercicios que já desenvolvi como estudante da Trybe no meu <a href="https://github.com/raelnogpires/exercicios-trybe" target="_blank">repositório GitHub</a>.</p>
+    </div>
+
     <main>
       <section>
-        <p>Veja alguns dos exercicios que já desenvolvi como estudante da Trybe no meu <a href="https://github.com/raelnogpires/exercicios-trybe" target="_blank">repositório GitHub</a>.</p>
+        <h1>Algumas lições aprendidas neste começo de Trybe</h1>
+        <ol id="licoes_aprendidas">
+          <li>Unix e SO's que o usam como base.</li>
+          <li>Como o Hardware se comunica com o Software através do Kernel.</li>
+          <li>Versionar arquivos usando o Git.</li>
+          <li>Usar um repositório remoto, no caso, GitHub.</li>
+          <li>O funcionamento da Internet como um todo.</li>
+          <li>Estruturar uma página em HTML.</li>
+          <li>Estilizar uma página usando o CSS.</li>
+          <li>Usar o HTML Semântico e seus benefícios.</li>
+          <li>A importância de trabalhar sua saúde mental e inteligência emocional.</li>
+          <li>Saber expressar minhas opiniões em equipe.</li>
+        </ol>
       </section>
-      <h2>Alguns aprendizados deste começo de Trybe</h2>
-      <ol id="licoes_aprendidas">
-        <li>Unix e SO's que o usam como base.</li>
-        <li>Como o Hardware se comunica com o Software através do Kernel.</li>
-        <li>Versionar arquivos usando o Git.</li>
-        <li>Usar um repositório remoto, no caso, GitHub.</li>
-        <li>O funcionamento da Internet como um todo.</li>
-        <li>Estruturar uma página em HTML.</li>
-        <li>Estilizar uma página usando o CSS.</li>
-        <li>Usar o HTML Semântico e seus benefícios.</li>
-        <li>A importância de trabalhar sua saúde mental e inteligência emocional.</li>
-        <li>Saber expressar minhas opiniões em equipe.</li>
-      </ol>
-      <h2>Aprendizados que desejo ter ao longo do curso</h2>
-      <ul id="licoes_a_aprender">
-        <li>JavaScript e React para desenvolvimento Front-end.</li>
-        <li>Aprender e melhorar mais a minha inteligência emocional.</li>
-        <li>NodeJS e MongoDB para desenvolvimento Back-end.</li>
-        <li>Trabalhar de forma mais eficiente.</li>
-        <li>Metodologias Ágeis, como Scrum e Kanban.</li>
-        <li>Me tornar um líder melhor.</li>
-        <li>Python e Algoritmos, como introdução à Ciência da Computação.</li>
-        <li>Aprender a organizar melhor meu tempo.</li>
-        <li>Construir códigos mais limpos e organizados.</li>
-        <li>Aprender a passar meu conhecimento de uma forma mais didática para ajudar outras pessoas sempre que puder.</li>
-      </ul>
+      <section>
+        <h1>Lições que desejo aprender ao longo do curso</h1>
+        <ul id="licoes_a_aprender">
+          <li>JavaScript e React para desenvolvimento Front-end.</li>
+          <li>Aprender e melhorar mais a minha inteligência emocional.</li>
+          <li>NodeJS e MongoDB para desenvolvimento Back-end.</li>
+          <li>Trabalhar de forma mais eficiente.</li>
+          <li>Metodologias Ágeis, como Scrum e Kanban.</li>
+          <li>Me tornar um líder melhor.</li>
+          <li>Python e Algoritmos, como introdução à Ciência da Computação.</li>
+          <li>Aprender a organizar melhor meu tempo.</li>
+          <li>Construir códigos mais limpos e organizados.</li>
+          <li>Aprender a passar meu conhecimento de uma forma mais didática para ajudar outras pessoas sempre que puder.</li>
+        </ul>
+      </section>
+
       <article>
-        <h2>Meu aprendizado na Trybe</h2>
+        <h1>Meu aprendizado na Trybe</h1>
         <p>Minhas aulas na Trybe começaram há cerca de duas semanas atrás e desde então pude ver com os meus próprios olhos que tudo oque foi dito sobre essa escola é verdade. O ambiente acolhedor onde todos podem contribuir e expressar suas dúvidas sem medo de julgamentos, a importância que é dada para as soft-skills, a equipe disposta a te ajudar da melhor maneira possível, a rotina extremamente puxada, a densidade do conteúdo, é tudo verdade. Até então, é a experiência mais diferente que já tive na vida como aluno.</p>
       </article>
     </main>
 
     <aside>
-      <h2>Uma passagem sobre meu aprendizado</h2>
+      <h1>Uma passagem sobre meu aprendizado</h1>
       <p>Um fato engraçado que aconteceu sexta-feira passada (20/08) foi no fechamento do dia. Estava com a cabeça a milhão e acabei tentando entrar no Zoom de fechamento 10 minutos antes do horário, é o clima de sextou!</p>
     </aside>
 
     <footer id="rodape">
-      <p>Página desenvolvida por Rael Nogueira Pires no Projeto <b>Lessons Learned</b>, 2021.</p>
+      <p><b></b>Página desenvolvida por Rael Nogueira Pires no Projeto Lessons Learned, 2021.</b></p>
     </footer>
+
   </body>
 </html>
