4. Adicione uma lista de lições aprendidas à página

--- a/index.html
+++ b/index.html
@@ -11,8 +11,23 @@
 <body>
   <header id="cabecalho">
     <h1 id="titulo">Lições Aprendidas - TRYBE! 🚀</h1>
-    </header>
+  </header>
 
+  <main>
     <img id="minha_foto" src="images/minha-foto.jpeg" alt="Foto do Jonatas">
+
+    <ol id="licoes_aprendidas">
+        <li>Unix</li>
+        <li>Bash</li>
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>Internet</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Zoom</li>
+        <li>Slack</li>
+        <li>Autoconhecimento</li>
+    </ol>
+  </main>  
 </body>
 </html>
