--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <table>
     <tr>
     <td>Módulo 1:</td>
-    <td>Ok</td>
+    <td class="ok">Ok</td>
     </tr>
     <tr>
     <td>Módulo 2:</td>
