Requisitos 31/31, mais ainda apanhando do CSS =(

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="artigos">
       <article >   
         <h1>sobre seu aprendizado #loremipsum</h1>
-        <section class="lado-direito-centro">
+        <section class="lado-direito">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit ad amet reiciendis pariatur nesciunt dicta laudantium atque nisi debitis, consequatur inventore voluptas facere quasi saepe est iusto ipsam. Quaerat, laborum.
           
         </section>
