--- a/index.html
+++ b/index.html
@@ -45,10 +45,20 @@
         </section>
         <article>
             <h2>Meu aprendizado</h2>
-            A Trybe tem me proporcionado um curso onde o meu papel implica ser protagonista na minha trajetória de<br>
+            <p>A Trybe tem me proporcionado um curso onde o meu papel implica ser protagonista na minha trajetória de<br>
             estudos. Tenho aprendido coisas até o momento com HTML,CSS,GitHub,Git e semântica de HTML. A cada módulos tem<br>
-            incluido também projetos. 
+            incluido também projetos.
+            </p> 
         </article>
+        <aside>
+            <h2>Passagem sobre meu aprendizado</h2>
+            <p> Esse curso vem sendo uma das experiências mais desafiadoras da minha, principalmente em relação<br>
+                ao contúdo de html e css. Porém por mais que seja bem desafiador, essa experiências vem sendo muito<br>
+                empolgante também.
+
+            </p>
+
+        </aside>
         <footer id="rodape">
             Todos direitos reservado, Hugo Daniel.
         </footer>
