primeiro codesniffer passado

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     </header>
   </div> 
   <div>
-          <img id="minha_foto" src="minha_foto.jpeg">
+          <img id="minha_foto" src="minha_foto.jpeg" alt="Foto de perfil Hugo Maximiano"> 
   </div> 
 
-  <section>
+  <section id="licoes">
   <div>
       <h2>
         <ol id="licoes_aprendidas">
@@ -49,6 +49,11 @@
       </h2>
   </div>  
 </section>
+<section>
+    <article>
+        <p>Sempre tive muito facilidade em aprendizagem, e sempre achei bom novos desafios. </p>
+    </article>  
+  </section>
 <div>
     <footer id="rodape">
       <nav id="links_externos">
@@ -64,5 +69,6 @@
       </nav>
     </footer>
 </div>
+
 </body>
 </html>
