--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
 
     <p>Conheça outros projetos desenvolvidos por Renata Magno no <a href="https://www.betrybe.com/" target="_blank">GitHub</a></p>
 
-    <article>
+    <article class="lado-esquerdo">
       <title>
         <h3>Título</h3>
       </title>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam viverra hendrerit felis at porta. Duis rutrum tempor ex quis dignissim. Morbi egestas ante mi, eget elementum felis aliquet posuere. Nunc mollis viverra tempor. Nam sodales sem nec elementum facilisis. Nulla ut faucibus diam. Proin eleifend, sapien sed placerat volutpat, leo lacus varius lectus, vitae tristique ipsum justo quis mi. Maecenas consectetur erat erat, dapibus euismod enim gravida nec. Cras ut velit nisi.</p>
     </article>
 
-    <section>
+    <section class="lado-direito">
       <aside>
         <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
       </aside>
