--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
      <header id="cabecalho">
          <h1 id="titulo">Lições aprendidas - Trybe!</h1>
      </header>
+     <section>
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">Login</a>
+        </nav>
+    </section>
 
      <img src="minha_foto.jpg" alt="garoto sorrindo" id="minha_foto">
      
