correção de lados e inclusão de tabela.

--- a/index.html
+++ b/index.html
@@ -22,44 +22,50 @@
       </ul>
     </nav>
     <section>
-      <div>
-        <h2>Lições aprendidas</h2>
-        <ol id="licoes_aprendidas">
-          <li>HTML</li>
-          <li>Tags</li>
-          <li>Semântica</li>
-          <li>CSS</li>
-          <li>Display</li>
-          <li>Background</li>
-          <li>Seletores e Posicionamento</li>
-          <li>Estrutura de páginas de HTML</li>
-          <li>Unix & Bash</li>
-          <li>Git, Github e Internet</li>
-        </ol>
-      </div>
-      <div>
-        <h2>Lições que desejo aprender</h2>
-        <ul id="licoes_a_aprender">
-          <li>Rest</li>
-          <li>JavaScript</li>
-          <li>Flexbox</li>
-          <li>API</li>
-          <li>Funções SQL</li>
-          <li>MongoDB</li>
-          <li>NodeJS</li>
-          <li>Solid e ORM</li>
-          <li>Unix & Bash</li>
-          <li>Deployment</li>
-        </ul>
-      </div>
+      <table>
+        <tr>
+          <th>Lições aprendidas</th>
+          <th>Lições que desejo aprender</th>
+        </tr>
+        <tr>
+          <td>
+            <ol id="licoes_aprendidas">
+              <li>HTML</li>
+              <li>Tags</li>
+              <li>Semântica</li>
+              <li>CSS</li>
+              <li>Display</li>
+              <li>Background</li>
+              <li>Seletores e Posicionamento</li>
+              <li>Estrutura de páginas de HTML</li>
+              <li>Unix & Bash</li>
+              <li>Git, Github e Internet</li>
+            </ol>
+          </td>
+          <td>
+            <ul id="licoes_a_aprender">
+              <li>Rest</li>
+              <li>JavaScript</li>
+              <li>Flexbox</li>
+              <li>API</li>
+              <li>Funções SQL</li>
+              <li>MongoDB</li>
+              <li>NodeJS</li>
+              <li>Solid e ORM</li>
+              <li>Unix & Bash</li>
+              <li>Deployment</li>
+            </ul>
+          </td>
+        </tr>
+      </table>
     </section>
-    <article class="lado_esquerdo">
+    <article class="lado-esquerdo">
       <h3>O meu caminho até aqui!</h3>
       <p>Incrivelmente me assusto com o que sou capaz de fazer em curto espaço de tempo. A aprendizagem foi intensa, mas recompensadora. Inegavelmente o Tio Jack foi essencial para guiar por este caminho tortuoso dos becos escuros do HTML e CSS. Porém, agora me sinto, pelo menos um pouco, mais preparado para enfrentar maiores desafios e evoluir finalmente. É razoável afirmar que a Trybe será o foco de meus esforços por muito tempo.</p>
     </article>
-    <aside class="lado_direito">
+    <aside class="lado-direito">
       <h3>Passagem sobre o aprendizado</h3>
-      <p>Durante a longa e dura jornada, me deparei com um crescimento inesperado em um curto período. Veja, mesmo que antes do início da Trybe tentei aprender HTML/CSS por intermédio de outras plataformas, sem sucesso. As informações providas, apesar de boas, não direcionam em um crescimento contínuo.</p>
+      <p>Durante a longa e dura jornada, me deparei com um crescimento inesperado em um curto período. Veja, mesmo que antes do início da Trybe tentei aprender HTML/CSS por intermédio de outras plataformas, sem sucesso.</p>
     </aside>
   </main>
   <footer id="rodape">
