--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
          nela um ambiente seguro, que vem tornando meu aprendizado cada vez mais tranquilo. Os primeiros dias foram de muito desconforto, pois<br>
           estou fazendo transição de carreira não entendia nada da área, tive que instalar programas que nem conhecia.
     </article>
-    <aside>Logo que cheguei tive dificuldades com o site github,<br>
+    <section><aside>Logo que cheguei tive dificuldades com o site github,<br>
          ainda estou me adaptando a ele, além de aprender git e github, aprendi<br>
           como funciona a internet, como estruturar uma pagina com html e<br>
-           como estilizá-la com css.</aside>
+           como estilizá-la com css.</aside></section>
 
     <nav class="margem"><h2><a href="https://github.com/anaualima" target="_blank">Conheça meu GitHub</a></h2></nav>
     <footer id="rodape">Todos os direitos reservados a Alissandra Lima</footer>
